--- a/Quizzler-iOS13/Base.lproj/Main.storyboard
+++ b/Quizzler-iOS13/Base.lproj/Main.storyboard
@@ -15,47 +15,63 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="UK2-CZ-he1" userLabel="Parent-Stack">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background-Bubbles" translatesAutoresizingMaskIntoConstraints="NO" id="xKz-mb-95P">
+                                <rect key="frame" x="0.0" y="794" width="414" height="102"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="UK2-CZ-he1" userLabel="Parent-Stack">
                                 <rect key="frame" x="20" y="64" width="374" height="788"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="TU2-Sr-NRB" userLabel="Question-Label">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="279.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="538"/>
                                         <string key="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Lcb-Jr-uv2" userLabel="Button-Stack">
-                                        <rect key="frame" x="0.0" y="582" width="374" height="206"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Lcb-Jr-uv2" userLabel="Button-Stack">
+                                        <rect key="frame" x="0.0" y="548" width="374" height="240"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Rg1-zr-gzr">
-                                                <rect key="frame" x="0.0" y="0.0" width="374" height="98"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Rg1-zr-gzr">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="120"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sdw-ds-NVR" userLabel="TrueBtn">
-                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="44"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                                                         <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="50" id="Fhu-Lc-uMt"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="26"/>
                                                         <state key="normal" title="True">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
+                                                        <connections>
+                                                            <action selector="answerPressed:" destination="oHC-Ok-oje" eventType="touchUpInside" id="nuY-p0-yXJ"/>
+                                                        </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S2T-3b-M0M" userLabel="FalseBtn">
-                                                        <rect key="frame" x="0.0" y="54" width="374" height="44"/>
-                                                        <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <rect key="frame" x="0.0" y="70" width="374" height="50"/>
+                                                        <color key="backgroundColor" red="0.89722050537312692" green="0.36144809220798829" blue="0.33364410632611857" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="50" id="A8D-mP-qGd"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                                         <state key="normal" title="False">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
+                                                        <connections>
+                                                            <action selector="answerPressed:" destination="oHC-Ok-oje" eventType="touchUpInside" id="Sat-yV-5Rd"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
+                                                <variation key="heightClass=compact-widthClass=compact" axis="horizontal"/>
                                                 <variation key="heightClass=compact-widthClass=regular" axis="horizontal"/>
                                                 <variation key="heightClass=regular-widthClass=regular" axis="horizontal"/>
                                             </stackView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="28z-Z3-Yvq">
-                                                <rect key="frame" x="0.0" y="108" width="374" height="98"/>
+                                                <rect key="frame" x="0.0" y="120" width="374" height="120"/>
                                                 <subviews>
                                                     <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="cdo-dE-phl">
-                                                        <rect key="frame" x="10" y="44" width="354" height="10"/>
+                                                        <rect key="frame" x="10" y="55" width="354" height="10"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="10" id="qId-k6-VUm"/>
                                                         </constraints>
@@ -74,9 +90,6 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background-Bubbles" translatesAutoresizingMaskIntoConstraints="NO" id="xKz-mb-95P">
-                                <rect key="frame" x="0.0" y="794" width="414" height="102"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.52266680510643793" green="0.36451546554254527" blue="0.96620899438858032" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -91,6 +104,12 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="LPz-fO-Evg"/>
                     </view>
+                    <connections>
+                        <outlet property="falseBtn" destination="S2T-3b-M0M" id="XIA-hC-Osy"/>
+                        <outlet property="progressBar" destination="cdo-dE-phl" id="SBc-fl-qzP"/>
+                        <outlet property="questionLbl" destination="TU2-Sr-NRB" id="mmM-Fr-1pc"/>
+                        <outlet property="trueBtn" destination="Sdw-ds-NVR" id="10D-gx-ZZu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PL2-98-Id6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
