--- a/Quizzler-iOS13/View/Base.lproj/Main.storyboard
+++ b/Quizzler-iOS13/View/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,20 +19,50 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background-Bubbles" translatesAutoresizingMaskIntoConstraints="NO" id="xKz-mb-95P">
                                 <rect key="frame" x="0.0" y="794" width="414" height="102"/>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="UK2-CZ-he1" userLabel="Parent-Stack">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="UK2-CZ-he1" userLabel="Parent-Stack">
                                 <rect key="frame" x="20" y="64" width="374" height="788"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="TU2-Sr-NRB" userLabel="Question-Label">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="538"/>
-                                        <string key="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
-                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Lcb-Jr-uv2" userLabel="Button-Stack">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ybk-KB-zFb" userLabel="Score-Container">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="24"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O3h-xQ-5Kp" userLabel="Score-Label">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="O3h-xQ-5Kp" secondAttribute="bottom" id="ODA-Wy-Cti"/>
+                                            <constraint firstItem="O3h-xQ-5Kp" firstAttribute="leading" secondItem="Ybk-KB-zFb" secondAttribute="leading" id="d3N-rc-pI1"/>
+                                            <constraint firstAttribute="trailing" secondItem="O3h-xQ-5Kp" secondAttribute="trailing" id="p7O-e1-M5s"/>
+                                            <constraint firstItem="O3h-xQ-5Kp" firstAttribute="top" secondItem="Ybk-KB-zFb" secondAttribute="top" id="sby-Zm-HAE"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5YU-N7-k9U" userLabel="Question-Container">
+                                        <rect key="frame" x="0.0" y="34" width="374" height="504"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="TU2-Sr-NRB" userLabel="Question-Label">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="504"/>
+                                                <string key="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
+                                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="TU2-Sr-NRB" firstAttribute="top" secondItem="5YU-N7-k9U" secondAttribute="top" id="8st-op-vrx"/>
+                                            <constraint firstAttribute="bottom" secondItem="TU2-Sr-NRB" secondAttribute="bottom" id="9Sx-yA-y0I"/>
+                                            <constraint firstItem="TU2-Sr-NRB" firstAttribute="leading" secondItem="5YU-N7-k9U" secondAttribute="leading" id="DZQ-aM-mZq"/>
+                                            <constraint firstAttribute="trailing" secondItem="TU2-Sr-NRB" secondAttribute="trailing" id="Gkg-DE-QMA"/>
+                                        </constraints>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Lcb-Jr-uv2" userLabel="Bottom-Stack">
                                         <rect key="frame" x="0.0" y="548" width="374" height="240"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Rg1-zr-gzr">
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Rg1-zr-gzr" userLabel="Button-Stack">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="120"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sdw-ds-NVR" userLabel="TrueBtn">
@@ -64,10 +95,11 @@
                                                     </button>
                                                 </subviews>
                                                 <variation key="heightClass=compact-widthClass=compact" axis="horizontal"/>
-                                                <variation key="heightClass=compact-widthClass=regular" axis="horizontal"/>
+                                                <variation key="heightClass=compact-widthClass=regular" axis="horizontal" spacing="20"/>
+                                                <variation key="heightClass=regular-widthClass=compact" spacing="20"/>
                                                 <variation key="heightClass=regular-widthClass=regular" axis="horizontal"/>
                                             </stackView>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="28z-Z3-Yvq">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="28z-Z3-Yvq" userLabel="ProgressBar-Container">
                                                 <rect key="frame" x="0.0" y="120" width="374" height="120"/>
                                                 <subviews>
                                                     <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="cdo-dE-phl">
@@ -89,9 +121,12 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="5YU-N7-k9U" firstAttribute="top" secondItem="UK2-CZ-he1" secondAttribute="top" constant="34" id="cVB-Sp-lGE"/>
+                                </constraints>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="0.52266680510643793" green="0.36451546554254527" blue="0.96620899438858032" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.20392156862745098" green="0.16862745098039217" blue="0.2196078431372549" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="UK2-CZ-he1" firstAttribute="top" secondItem="LPz-fO-Evg" secondAttribute="top" constant="20" id="J42-oh-Tpk"/>
@@ -105,10 +140,11 @@
                         <viewLayoutGuide key="safeArea" id="LPz-fO-Evg"/>
                     </view>
                     <connections>
-                        <outlet property="falseBtn" destination="S2T-3b-M0M" id="XIA-hC-Osy"/>
                         <outlet property="progressBar" destination="cdo-dE-phl" id="SBc-fl-qzP"/>
                         <outlet property="questionLbl" destination="TU2-Sr-NRB" id="mmM-Fr-1pc"/>
-                        <outlet property="trueBtn" destination="Sdw-ds-NVR" id="10D-gx-ZZu"/>
+                        <outlet property="scoreLbl" destination="O3h-xQ-5Kp" id="2dR-LE-gP4"/>
+                        <outletCollection property="answerBtns" destination="Sdw-ds-NVR" collectionClass="NSMutableArray" id="8wS-kY-Gd0"/>
+                        <outletCollection property="answerBtns" destination="S2T-3b-M0M" collectionClass="NSMutableArray" id="PsZ-it-tTR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PL2-98-Id6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
